# context-creator

./: .code-digest.toml  .digestignore  .digestkeep  .editorconfig  .gitignore  .mcp.json  .rustfmt.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  RMCP_TEST_SUMMARY.md  architecture-analysis.md  clippy.toml  config_analysis.md  debug_include_types.rs  debug_semantic.rs  debug_simple.rs  debug_test.py  debug_test.rs  mcp-implementation-review.md  mcp_config.json  repo_context.md  rmcp-migration-plan.md  run_essential_tests.sh  rust-performance-optimization-guide.md  test.md  test_debug.py  test_expansion.rs  test_python_import.rs  test_rmcp_server.sh  test_semantic_debug.rs
.cargo/: audit.toml  config.toml
.githooks/: README.md  pre-commit  pre-push
.github/workflows/: cargo-publish.yml  ci.yml  npm-publish.yml  release.yml
benches/: benchmarks.rs  type_resolution_bench.rs
docs/: README.md  api.md  architecture.md  configuration.md  examples.md  installation.md  mcp-server.md  parallel_processing.md  troubleshooting.md  usage.md
examples/: README.md  mcp_client.rs
examples/config-examples/: comprehensive.toml  minimal.toml
examples/sample-mixed-project/: .contextkeep  .digestignore  package.json
examples/sample-mixed-project/docs/: README.md
examples/sample-mixed-project/src/: index.js  utils.py
examples/sample-mixed-project/tests/: test_api.js
examples/sample-rust-project/: Cargo.toml
examples/sample-rust-project/src/: lib.rs  main.rs
examples/telemetry/: README.md  traces.json
src/: cli.rs  config.rs  core.rs  lib.rs  logging.rs  main.rs  remote.rs
src/commands/: diff.rs  mod.rs  search.rs  telemetry.rs
src/core/: cache.rs  context_builder.rs  digest.rs  file_expander.rs  mod.rs  prioritizer.rs  project_analyzer.rs  search.rs  semantic_cache.rs  semantic_graph.rs  semantic_graph_v2.rs  token.rs  walker.rs
src/core/semantic/: analyzer.rs  cache.rs  cache_v2.rs  cycle_detector.rs  dependency_types.rs  function_call_index.rs  graph_builder.rs  graph_builder_tests.rs  graph_traverser.rs  graph_traverser_tests.rs  javascript_test.rs  mod.rs  parallel_analyzer.rs  parallel_analyzer_tests.rs  parser_pool.rs  path_validator.rs  python_test.rs  query_engine.rs  resolver.rs  rust_function_call_test.rs  test.rs  type_resolver.rs
src/core/semantic/languages/: c.rs  cpp.rs  csharp.rs  dart.rs  elixir.rs  elm.rs  go.rs  java.rs  javascript.rs  julia.rs  kotlin.rs  lua.rs  mod.rs  php.rs  (+7 more)
src/core/telemetry/: correlator.rs  enricher.rs  mod.rs  otlp_parser.rs  types.rs
src/formatters/: markdown.rs  mod.rs  paths.rs  plain.rs  xml.rs
src/mcp_server/: cache.rs  handlers.rs  mod.rs  rmcp_handlers.rs  rmcp_server.rs
src/utils/: error.rs  file_ext.rs  git.rs  mod.rs
test_dir/: output.md
test_no_git/test_no_git_dir/: Cargo.toml  handler.rs  main.rs
test_no_git_no_markers/: test.rs
test_project/shared/types/: mod.rs
test_project/src/handlers/: user_handler.rs
test_project/src/models/: user.rs
test_semantic/: main.py  main.rs  utils.rs
tests/: binary_name_test.rs  cache_integration_test.rs  cli_combinations_test.rs  cli_flexibility_test.rs  cli_git_context_test.rs  cli_mcp_test.rs  cli_repo_paths_bug_test.rs  cli_test.rs  cli_uncovered_scenarios_test.rs  config_precedence_test.rs  config_rename_test.rs  content_hash_internal_test.rs  content_hash_test.rs  context_options_test.rs  cycle_detection_integration.rs  cycle_detection_test.rs  cycle_detection_warning_test.rs  debug_include_types_test.rs  e2e_test.rs  edge_typing_test.rs  git_context_integration_test.rs  git_context_test.rs  glob_pattern_test.rs  ignore_patterns_test.rs  integration_test.rs  lib.rs  markdown_git_context_test.rs  mcp_acceptance_mock_test.rs  mcp_acceptance_test.rs  mcp_server_test.rs  module_rename_test.rs  parallel_semantic_test.rs  parallel_workflow_test.rs  performance_test.rs  performance_test.rs.disabled  prompt_token_reservation_test.rs  python_semantic_edge_cases_test.rs  python_semantic_error_cases_test.rs  python_semantic_output_test.rs  python_semantic_stress_test.rs  (+24 more)
tests/acceptance/: mod.rs  python_enrichment_test.rs  rust_enrichment_test.rs  typescript_enrichment_test.rs
tests/acceptance/python/: payment_service.py  payment_traces.json
tests/acceptance/rust/: analyzer_service.rs  analyzer_traces.json
tests/acceptance/typescript/: frontend.ts  frontend_traces.json
tests/integration/: cli_include_callers_simple_test.rs  cli_include_callers_test.rs  include_callers_real_repos_test.rs
tests/modules/: binary_filtering_integration_test.rs  binary_name_test.rs  cli_combinations_test.rs  cli_flexibility_test.rs  cli_repo_paths_bug_test.rs  cli_test.rs  cli_uncovered_scenarios_test.rs  config_interactions_e2e_test.rs  config_precedence_test.rs  config_rename_test.rs  content_hash_internal_test.rs  content_hash_test.rs  cycle_detection_integration.rs  cycle_detection_test.rs  cycle_detection_warning_test.rs  diff_cli_test.rs  diff_e2e_test.rs  diff_functionality_missing_test.rs  diff_security_vulnerabilities_test.rs  e2e_test.rs  edge_typing_test.rs  formatters_test.rs  git_utilities_test.rs  git_utilities_vulnerability_test.rs  glob_pattern_test.rs  ignore_patterns_test.rs  integration_test.rs  integration_trace_imports_test.rs  llm_tool_e2e_test.rs  logging_test.rs  module_rename_test.rs  output_format_test.rs  prompt_token_reservation_test.rs  python_semantic_edge_cases_test.rs  python_semantic_output_test.rs  reliability_stress_subset_test.rs  remote_parsing_test.rs  search_acceptance_test.rs  search_command_test.rs  search_gitignore_test.rs  (+20 more)
tests/modules/acceptance/: TEST_SUMMARY.md  binary_filtering.rs  builders.rs  complex_combinations.rs  core_inclusion.rs  fixtures.rs  helpers.rs  mod.rs  semantic_callers.rs  semantic_imports.rs  semantic_types.rs
tests/modules/edge_cases/: TEST_ASSUMPTIONS.md  category_1_pathological_inputs.rs  category_2_file_content.rs  category_3_python_semantic.rs  category_4_typescript_semantic.rs  category_5_rust_semantic.rs  category_6_flag_interactions.rs  helpers.rs  mod.rs
(+1 files in other folders)
