[package]
name = "code-digest"
version = "0.3.0"
edition = "2021"
description = "High-performance CLI tool to convert codebases to Markdown for LLM context"
authors = ["Matias Villaverde"]
repository = "https://github.com/matiasvillaverde/code-digest"
license = "MIT"
keywords = ["cli", "llm", "code", "context", "markdown"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
ignore = "0.4"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.10"
thiserror = "1.0"
tiktoken-rs = "0.5"
toml = "0.8"
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
criterion = { version = "0.5", features = ["html_reports"] }
predicates = "3.1"
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[[bench]]
name = "benchmarks"
harness = false
