[package]
name = "context-creator"
version = "1.0.0"
edition = "2021"
description = "High-performance CLI tool to convert codebases to Markdown for LLM context"
authors = ["Matias Villaverde"]
repository = "https://github.com/matiasvillaverde/context-creator"
license = "MIT"
keywords = ["cli", "llm", "code", "context", "markdown"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
arboard = "3.2"
clap = { version = "4.5", features = ["derive"] }
dashmap = "5.5"
dirs = "5.0"
glob = "0.3"
ignore = "0.4"
itertools = "0.13"
lru = "0.12"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.10"
thiserror = "1.0"
tiktoken-rs = "0.5"
toml = "0.8"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-go = "0.20"
tree-sitter-java = "0.20"
walkdir = "2.5"
deadpool = "0.10"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
moka = { version = "0.12", features = ["future"] }
petgraph = "0.6"

[dev-dependencies]
assert_cmd = "2.0"
criterion = { version = "0.5", features = ["html_reports"] }
predicates = "3.1"
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
opt-level = 0
debug = 1
incremental = true
codegen-units = 256

[profile.test]
opt-level = 0
debug = 1
incremental = true
codegen-units = 256

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "type_resolution_bench"
harness = false
